#9104 closed bug (fixed)
Scroll bar arrows aren't aligned properly
Reported by: | jessicah | Owned by: | stippi |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | User Interface | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
The scroll bar arrows aren't aligned properly, so end up looking unbalanced.
Also, whilst fixing the arrows, it would be nice to see the BeOS style arrows make a comeback! Especially the double-arrows.
Attachments (1)
Change History (6)
comment:1 by , 8 years ago
comment:2 by , 8 years ago
To my eye it looks like the down and right arrows are misaligned. Moving them by 1 pixel seems to fix the issue (I did it in a graphics editor.) The code to change is here:
http://cgit.haiku-os.org/haiku/tree/src/kits/interface/ScrollBar.cpp#n1799
I think adding 1 to r.left for ARROW_RIGHT for all the tri variables will fix the right arrow, and adding 1 to all the r.top for the default case will fix the down arrow.
If no one makes this fix before I get a chance I'll do it. If someone does try to fix it, be sure to test with the double arrows too.
comment:3 by , 8 years ago
My suggested fix works perfectly, accept for the fact that there is FakeScrollbar within the Appearance preflet, with the exact same freaking code.
Since WebPositive also needs to render scrollbar arrows we need to move the code into ControlLook.
comment:5 by , 8 years ago
Well strictly speaking, it was fixed here:
http://cgit.haiku-os.org/haiku/commit/?id=f9b1a47fa329a440024cfcb45a82841ff6961f42
Could you attach a screenshot showing this issue? BTW, you can already enable double-arrows in the Appearance preflet.